# cuda_c_programming

markdown/: 00introduction.md  01cuda.md  02cuda_programing_model.md  03cuda_execute_model.md  util.md
solution/: Makefile
solution/01_hello/: Makefile  hello.cu
solution/02_cuda_programming_model/: Makefile
solution/02_cuda_programming_model/src/: defineGridBlock.cu  dev_info_check.cu  dimCheck.cu  gpu_select.cu  hostArraySum.cpp  mat_1d_1d_sum.cu  mat_2d_1d_sum.cu  mat_2d_2d_sum_win.cu  sumArrayOnGPU0.cu  threadIdxCheck.cu  timer_sum_array.cu  timer_sum_array_win.cu  timer_sum_threadx2.cu
solution/03_cuda_execute_model/: CMakeLists.txt  Makefile
solution/03_cuda_execute_model/src/: nestedReduce.cu  nestedReduce2.cu  nestedReduceNosync.cu  nested_helloworld.cu  nested_helloworld_blockwise.cu  reduceInteger.cu  simpleDeviceQuery.cu  simpleDivergence.cu  sumMatrix_win.cu
solution/04_global_memory/: .04_global_memory.md.swp  04_global_memory.md  sum_zero_cpy_uva.cu
solution/04_global_memory/src/: globalVariable.cu  memTransfer.cu  pinnedMemTransfer.cu  sum_zero_cpy.cu
solution/common/: common.h  common_win.h
